[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "airtable_helper"
version = "0.0.12"
authors = [
    { name="shrank", email="info@murxs.ch" },
]
license = "CC0-1.0"
readme = "README.md"
description = "Simple class that helps dealing with airtable api"
requires-python = ">=3.0"
classifiers = [
   "Programming Language :: Python :: 3",
   "Operating System :: OS Independent",
]
keywords = ["airtable"]
dependencies = [
"pyairtable"
]

[tool.setuptools.packages]
find = {}

[project.urls]
Homepage = "https://github.com/shrank/airtable-helper"